Fixed broken CSS. Added link to GitHub Repo

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ h3 {
   border-radius: 12px;
   box-shadow: -5px -5px 9px rgba(255, 255, 255, 0.45),
     5px 5px 9px rgba(94, 104, 121, 0.3);
-  margin: 400px;
+  margin: 200px;
   padding: 30px;
 }
 
